- pts-core: Add ResultPrecision XML tag to results-parser for setting math precision of decimal points on result (default remains 2)
- pts-core: Add support for writing to $INSTALL_FOOTNOTE during test installations to report custom footnote on generated graphs
- pts-core: Add SuiteSparse, TinyXML, DUNE external dependencies
- pts_Graph: Improve precision of increments for graph results with sub-1 values
- phodevi: Protect against "undefined" memory strings from DMI data
- phodevi: Add Wayland Weston version detection
- phodevi: Detect gnome-shell-wayland
- phodevi: Add support for CPU node-count property for number of physical CPU nodes

Phoronix Test Suite 4.8.3-Sokndal
2 October 2013

- pts-core: Fix openmpi on Gentoo external dependency
- pts-core: Detect graphics comparison when GPU changes with audio string
- pts-core: Don't use HTTPS on proxies when connecting to OpenBenchmarking.org
- pts-core: Add VersionSpecific capability to external dependencies handling for package(s) that may only be in certain OS versions
- pts-core: Ensure xscreensaver is deactivated
- pts-core: Support toggling GNOME3 screensaver on GNOME 3.8+ where org.gnome.desktop.screensaver idle-activation-enabled -> org.gnome.desktop.session idle-delay
- phodevi: Fix for parsing long PCI string values
- phodevi: Improve Intel GPU model detection with recent xf86-video-intel DDX

Phoronix Test Suite 4.8.2-Sokndal
30 August 2013

- pts-core: Fix for reporting environment variables to system notes on system graph table
- pts-core: Fix OpenBenchmarking.org class issue for select code paths

Phoronix Test Suite 4.8.1-Sokndal
14 August 2013

- pts-core: Fix OpenBenchmarking.org log-ins

Phoronix Test Suite 4.8.0-Sokndal
13 August 2013

- pts-core: When PHP is missing, for apt-get/yum distributions report the likely command needed to run
- pts-core: Don't prompt to install missing/failed tests when using the 'benchmark' command